fix item alignment

--- a/src/components/eventListItem/style.scss
+++ b/src/components/eventListItem/style.scss
@@ -48,10 +48,10 @@
       &.hostedBy {
         font-style: italic;
         font-size: .8rem;
+        line-height: 1;
       }
       font-size: .9rem;
       margin-bottom: 1rem;
-      line-height: 1;
     }
 
     .contact-info {
@@ -71,10 +71,13 @@
 
   aside {
     margin-top: 1rem;
+    flex: 0 0 auto;
     @include media-breakpoint-up(lg) {
       margin-top: 0;
       margin-left: 1rem;
-      align-self: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     ul {
       list-style: none;
